--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,11 @@ description "Cloud native todo"
 
 buildscript {
     ext {
-        kotlinVersion = '1.0.4'
-        springBootVersion = '1.4.1.RELEASE'
+        kotlinVersion = "1.0.4"
+        springBootVersion = "1.4.1.RELEASE"
+        aspenVersion = "2.0.0"
+        hamcrestVersion = "2.0.0.0"
+        jacksonVersion = "2.7.4"
     }
     repositories {
         mavenCentral()
